# amelie-md

./: .gitignore  CHANGELOG.md  README.docx  README.md  README_clean.html  README_clean.md  README_full.html  README_full.md  README_full_clean.md  SUITE_ARCHITECTURE.md  documento.html  documento.md  pyproject.toml  ~$README.docx
.github/workflows/: ci.yml
demo_project/: amelie.toml
demo_project/chapters/: 01_intro.md
docs/: semantic_syntax.md
docs/releases/: v1.3.0.md
examples/: code_highlighting.html  code_highlighting.md  import_docx.py  paper.md
examples/project_showcase/: amelie.toml  references.json
examples/v1_5_citations_crossrefs/: paper.md  references.json
outputs/: README_academic.html  README_highlight.html  README_readme.html  README_report.html
src/amelie_md/: cli.py  document.py  renderer.py
tests/: test_bibliography_renderer.py  test_citation_css.py  test_citations.py  test_core_bridge.py  test_docx_exporter.py  test_html_blocks.py  test_html_registry.py  test_html_semantic_rendering.py  test_inline_parser.py  test_project_builder.py  test_project_config.py  test_project_loader.py  test_project_showcase_assets.py  test_renderer.py  test_renderer_bibliography.py  test_renderer_citations.py  test_renderer_inline_html.py  test_renderer_registry.py  test_semantic_contract.py  test_semantic_cross_references.py  test_semantic_indexes.py  test_semantic_normalizer.py  test_semantic_numbering.py  test_semantic_pipeline.py  test_semantic_references.py  test_semantic_showcase.py  test_semantic_types.py  test_v1_5_showcase_assets.py
(+41 files in other folders)
